--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "test": "tape test/*.js"
   },
-  "version": "0.2.0",
+  "version": "0.2.1",
+  "description" : "pub/sub channels",
   "dependencies": {
     "bloody-class": "~1.1.0",
     "bloody-immediate": "~0.1.0"
